--- a/JoviRestaurant/JoviRestaurant.Web/Views/Shared/_Layout.cshtml
+++ b/JoviRestaurant/JoviRestaurant.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,9 @@
                             <a class="nav-link" asp-area="" asp-controller="Product" asp-action="ProductIndex">Product</a>
                         </li>
                          <li class="nav-item pt-lg-1">
-                            <a class="nav-link" asp-controller="Product" asp-action="ProductIndex">Product</a>
+                            <a class="nav-link" asp-controller="Cart" asp-action="CartIndex">
+                                <i class="fas fa-shopping-cart"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
